--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,4 +15,7 @@ sphinx:
 python:
   version: 3.7
   install:
-    - requirements: requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - nbsphinx
