--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,7 +15,4 @@ sphinx:
 python:
   version: 3.7
   install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - nbsphinx
+    - requirements: requirements.txt
